Fix some alignment problems

--- a/jsMenus.css
+++ b/jsMenus.css
@@ -9,6 +9,8 @@ body { display: flex; flex-direction: column }
 div.below-menubar { flex: 1 1 0; min-height: 0;}
 
 .menu-item > button {
+    display: flex;
+    width: 100%;
     border: none;
     padding: 0px;
     background-color: inherit;
@@ -124,11 +126,12 @@ li.menu-item.separator {
     align-self: center;
 }
 
-.menu-item .label {
+.menu-item > button > .label {
     padding: 0 22px 0 0;
     order: 0;
     flex: 1 0 auto;
     align-self: center;
+    text-align: left;
 }
 
 .menu-item.disabled,
